--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,20 @@
 {
-  "short_name": "4i",
   "name": "4i",
+  "short_name": "4i",
   "icons": [
-    {
-      "src": "static/favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
+      {
+          "src": "/android-chrome-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "/android-chrome-512x512.png",
+          "sizes": "512x512",
+          "type": "image/png"
+      }
   ],
   "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#6a59b0",
+  "background_color": "#6a59b0",
+  "display": "standalone"
 }
