--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,8 +14,8 @@
       }
   ],
   "start_url": ".",
-  "theme_color": "#6a59b0",
-  "background_color": "#6a59b0",
+  "theme_color": "#382584",
+  "background_color": "#382584",
   "display": "standalone",
   "orientation": "portrait"
 }
