--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,41 @@
   "short_name": "4i",
   "icons": [
       {
+          "src": "/static/favicon-16x16.png",
+          "sizes": "16x16",
+          "type": "image/png"
+      },
+      {
+          "src": "/static/favicon-32x32.png",
+          "sizes": "32x32",
+          "type": "image/png"
+      },
+      {
+          "src": "/static/mstile-70x70.png",
+          "sizes": "70x70",
+          "type": "image/png"
+      },
+      {
+          "src": "/static/mstile-144x144.png",
+          "sizes": "144x144",
+          "type": "image/png"
+      },
+      {
+          "src": "/static/mstile-150x150.png",
+          "sizes": "150x150",
+          "type": "image/png"
+      },
+      {
+          "src": "/static/mstile-310x150.png",
+          "sizes": "310x150",
+          "type": "image/png"
+      },
+      {
+          "src": "/static/mstile-310x310.png",
+          "sizes": "310x310",
+          "type": "image/png"
+      },
+      {
           "src": "/static/android-chrome-192x192.png",
           "sizes": "192x192",
           "type": "image/png"
