--- a/public/manifest.json
+++ b/public/manifest.json
@@ -48,7 +48,7 @@
           "type": "image/png"
       }
   ],
-  "start_url": "/index.html",
+  "start_url": "/",
   "scope": ".",
   "dir": "ltr",
   "lang": "en-US",
